Homepage of dr Carewell

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 1vh;
-    margin-top: 10vh;
+    padding-top:10vh;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -15,4 +15,36 @@
 .contact h1{
     padding: 50 100 0 100;
     font-size: 3rem;
+}
+
+.call-now-btn {
+    width: 200px;
+    background-color: #fff;
+    height: 50px;
+    border-radius: 50px;
+    color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-top: 2vh;
+    margin-bottom: 8vh;
+  }
+
+@media(max-width:625px){
+    .contact h1{
+        font-size:2rem;
+    }
+}
+
+@media(max-width:430px){
+    .contact h1{
+        font-size:1.3rem;
+    }
+    .call-now-btn{
+        height: 30px;
+        width: 150px;
+        font-weight: 400;
+    }
 }
