Homepage of dr Carewell

--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -23,3 +23,10 @@
       justify-content: center; /* Center cards on smaller screens */
     }
   }
+
+  @media (max-width: 492px){
+    .services{
+      padding-top: 3vh;
+      font-size: 2rem;
+    }
+  }
