--- a/src/styles/features.css
+++ b/src/styles/features.css
@@ -37,6 +37,11 @@
  border-radius: 20px;
 }
 
+.comma{
+    height:"80px" ;margin-left:"2vh";display:"block" ;margin-left:"0";
+    padding-right: 0.9vh;
+}
+
 .customer{
     background: #253041;
     padding: 30px;
@@ -46,13 +51,14 @@
     height: auto;
     font-family: sans-serif;
     font-size: 18px;
+    margin-bottom: 1vh;
 }
 
 
 .testimonial{
     margin-left: 3vw;
     margin-top: 2vw;
-    padding-bottom: 3vh;
+    padding-bottom: 0vh;
     height: auto;
     display: flex;
     flex-flow: row;
@@ -147,6 +153,9 @@
   
   
   @media (max-width: 726px){
+    .comma{
+        height: 30px;
+    }
     .featureImg .f3{
         margin-bottom: 0;
     }
