--- a/src/styles/features.css
+++ b/src/styles/features.css
@@ -69,7 +69,7 @@
 .testimonial{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
 }
 
